Fix baseline alignments across fonts

--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -3,7 +3,6 @@ code {
 	font-family: "Drafting";
 	font-size: 0.8em;
 	padding: 0.3em;
-	vertical-align: text-bottom;
 }
 pre {
 	border-left: $border;
